Final html code

--- a/calculator/calculator.html
+++ b/calculator/calculator.html
@@ -11,7 +11,7 @@
 <div class="main">
     <div class="button-container">
         <h1>Calculator</h1>
-        <input id="output" type="text" onkeydown="keyboard(event)" >
+        <input id="output" type="text" readonly>
         <div class="button-row">
             <button class="button" type="button" value="AC">AC</button>
             <button class="button"  type="button" value="%">%</button>
