--- a/Product-cart/cart.html
+++ b/Product-cart/cart.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Products</title>
+    <title>Cart</title>
     <link rel="stylesheet" href="product.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
         <div id="product">
             <div id="header">
                 <h1>Items</h1>
-                <a href="./cart.html" id="cart">Cart</a>
+                <a href="./product.html" id="cart">back</a>
             </div>
             <table id="table">
                 <tbody id="tbody">
@@ -19,6 +19,6 @@
             </table>
         </div>
     </div>
-    <script type="module" src="product.js"></script>
+    <script type="module" src="cart.js"></script>
 </body>
 </html>
