--- a/Product-cart/cart.html
+++ b/Product-cart/cart.html
@@ -19,6 +19,7 @@
             </table>
         </div>
     </div>
+    <script src="common.js"></script>
     <script type="module" src="cart.js"></script>
 </body>
 </html>
